remove use of Quadruple