@@ -3,14 +3,13 @@
  * SPDX-License-Identifier: GPL-2.0-only */
 package org.key_project.slicing;
 
+import de.uka.ilkd.key.rule.Rule;
+
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
-
-import de.uka.ilkd.key.rule.Rule;
-import de.uka.ilkd.key.util.Quadruple;
 
 /**
  * Simple data object to store a mapping of rules to various counters.
@@ -32,43 +31,43 @@ public class RuleStatistics {
     /**
      * Register one rule application (proof step).
      *
-     * @param rule the rule
+     * @param rule     the rule
      * @param branches whether this rule application creates new proof branches
      */
     public void addApplication(Rule rule, boolean branches) {
         String name = rule.displayName();
         ruleBranched.put(name, branches);
 
-        var entry = map.computeIfAbsent(name, it -> new RuleStatisticData(0, 0, 0));
-        map.put(name, new RuleStatisticData(entry.first + 1, entry.second, entry.third));
+        var entry = map.computeIfAbsent(name, it -> new RuleStatisticData(it,0, 0, 0));
+        map.put(name, new RuleStatisticData(name,entry.first + 1, entry.second, entry.third));
     }
 
     /**
      * Register a useless rule application (proof step).
      *
-     * @param rule the rule
+     * @param rule     the rule
      * @param branches whether this rule application creates new proof branches
      */
     public void addUselessApplication(Rule rule, boolean branches) {
         String name = rule.displayName();
         ruleBranched.put(name, branches);
 
-        var entry = map.computeIfAbsent(name, it -> new RuleStatisticData(0, 0, 0));
-        map.put(name, new RuleStatisticData(entry.first + 1, entry.second + 1, entry.third));
+        var entry = map.computeIfAbsent(name, it -> new RuleStatisticData(it, 0, 0, 0));
+        map.put(name, new RuleStatisticData(name, entry.first + 1, entry.second + 1, entry.third));
     }
 
     /**
      * Register an "initial useless" rule application (proof step).
      *
-     * @param rule the rule
+     * @param rule     the rule
      * @param branches whether this rule application creates new proof branches
      */
     public void addInitialUselessApplication(Rule rule, boolean branches) {
         String name = rule.displayName();
         ruleBranched.put(name, branches);
 
-        var entry = map.computeIfAbsent(name, it -> new RuleStatisticData(0, 0, 0));
-        map.put(name, new RuleStatisticData(entry.first + 1, entry.second + 1, entry.third + 1));
+        var entry = map.computeIfAbsent(name, it -> new RuleStatisticData(it, 0, 0, 0));
+        map.put(name, new RuleStatisticData(name, entry.first + 1, entry.second + 1, entry.third + 1));
     }
 
     /**
@@ -79,13 +78,10 @@ public class RuleStatistics {
      * @param comparator custom comparator
      * @return list of rule names + counters
      */
-    public List<Quadruple<String, Integer, Integer, Integer>> sortBy(
-            Comparator<Quadruple<String, Integer, Integer, Integer>> comparator) {
-        return map.entrySet().stream()
-                .map(entry -> new Quadruple<>(entry.getKey(), entry.getValue().first,
-                    entry.getValue().second, entry.getValue().third))
+    public List<RuleStatisticData> sortBy(Comparator<? super RuleStatisticData> comparator) {
+        return map.values().stream()
                 .sorted(comparator)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -96,6 +92,6 @@ public class RuleStatistics {
         return ruleBranched.get(rule);
     }
 
-    public record RuleStatisticData(int first, int second, int third) {
+    public record RuleStatisticData(String ruleName, int first, int second, int third) {
     }
 }
